<resources>
    <string name="app_name">My Movie Catalogue</string>
    <string name="settings">Settings</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>

    <!--    HOME-->
    <string name="search">Search</string>
    <string name="search_hint">Search by title..</string>
    <string name="no_internet_connection">No internet connection.</string>

    <!--    DETAIL ACTIVITY-->
    <string name="success_delete">Successfully delete from favorite</string>
    <string name="fail_delete">Failed to delete from favorite</string>
    <string name="success_add">Successfully add to favorite</string>
    <string name="fail_add">Failed to add to favorite</string>
    <string name="poster">poster</string>

    <!--    SETTING-->
    <string name="language_setting">Language</string>
    <string name="change_language">Change Language</string>
    <string name="reminder_daily">Reminder Daily</string>
    <string name="reminder_release">Reminder Release</string>
    <string name="reminder_settings">Reminder</string>

    <!--    REMINDER-->
    <string name="daily_message">My Movie Catalogue missing you.</string>

    <!--    WIDGET-->
    <string name="appwidget_text">FAVORITE MOVIE</string>
    <string name="show_widget_text">FAVORITE TV SHOW</string>
    <string name="tidak_ada_data">- There is no data -</string>
</resources>
